# sub-tools

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PYTHON_3.14_COMPATIBILITY.md  README.md  improvement-suggestions.md  pyproject.toml  pysrt.py  repository-analysis.md  requirements.txt  rich.py  silero_vad.py  soundfile.py  sub_tools
.github/workflows/: code-quality.yml  publish.yml  test-and-publish.yml  test.yaml  test.yml
rich/: __init__.py  console.py  panel.py  progress.py  theme.py
scripts/: check_dependencies.py  get_hls_url.sh  install_dependencies.sh
src/sub_tools/: __init__.py  config.py  main.py  transcribe.py
src/sub_tools/arguments/: env_default.py  parser.py
src/sub_tools/config/: README.md  base.py  errors.py  validation.py
src/sub_tools/intelligence/: client.py  gemini.py  transcriber.py  whisperx.py
src/sub_tools/media/: converter.py  info.py  segmenter.py
src/sub_tools/subtitles/: combiner.py  serializer.py  validator.py
src/sub_tools/system/: console.py  directory.py  file.py  language.py  logger.py  measure.py  rate_limiter.py
tests/: conftest.py  test_client.py  test_converter.py  test_directory.py  test_error_handling.py  test_group_ranges.py  test_group_ranges_direct.py  test_rate_limiter.py  test_segmentor.py
