[project]
name = "sub-tools"
version = "0.7.1"
description = "A robust Python toolkit powered by Google's Gemini API for converting video content into accurate, multilingual subtitles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "openai>=1.65.4",
    "pycountry>=24.6.1",
    "pydub>=0.25.1",
    "pysrt>=1.1.2",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.5",
    "python-ffmpeg>=2.0.12",
    "rich>=13.9.4",
    "silero-vad>=5.1.2",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.9",
    "mypy>=1.9.0",
    "black>=24.3.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
sub-tools = "sub_tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Code quality tool configurations
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "N",   # pep8-naming
]
ignore = []

[tool.ruff.isort]
known-first-party = ["sub_tools"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
